2004-12-16  Andrew Johnson <ajgenius@ajgenius.us>

	* README:
	Initial README updates for new release

2004-12-15  Thomas Wood  <thos@gnome.org>

	* configure.ac:
	* themes/LighthouseBlue/Makefile.am:
	* themes/LighthouseBlue/gtk-2.0/Makefile.am:
	* themes/LighthouseBlue/gtk-2.0/gtkrc:
	* themes/Makefile.am:
	* themes/Mist/Makefile.am:
	* themes/Mist/gtk-2.0/Makefile.am:
	* themes/Mist/gtk-2.0/gtkrc:

	Added Mist and LighthouseBlue themes (gtkrc files)

2004-12-15  Andrew Johnson <ajgenius@ajgenius.us>

	* engines/redmond/src/redmond_gtk2_drawing.c: (redmond_draw_arrow),
	(redmond_draw_box), (redmond_draw_handle):

	fix comboboxentry insensitive arrow
	fix RTL toolbar handles
	
	* engines/redmond/src/redmond_gtk2_misc.c: (is_combo_box),
	(is_in_combo_box):

	fix redmond comboboxentry check
	
	* engines/smooth/src/utils/draw_arrows.c: (SmoothDrawDirtyArrow),
	(SmoothDrawArrow):
	
	fix Etched Dirty Arrow offset
	
	* themes/Redmond/gtk-2.0/gtkrc:
	
	use white for progress bar prelight text

2004-12-15  Andrew Johnson <ajgenius@ajgenius.us>

	* engines/smooth/src/engine/shared/gtk/smooth_gtk_drawing.c:
	(smooth_draw_grip):
	* engines/smooth/src/utils/calc_colors.c:
	* engines/smooth/src/utils/calc_colors.h:
	* engines/smooth/src/utils/draw_grips.c:
	(do_smooth_draw_broken_bars), (do_smooth_draw_lines),
	(internal_smooth_draw_dot), (do_smooth_draw_dots),
	(do_smooth_draw_buds):
	* engines/smooth/src/utils/draw_grips.h:

	ensure "smooth" "namespace" on old grip functions

2004-12-15  Andrew Johnson <ajgenius@ajgenius.us>

	* engines/smooth/src/utils/draw_checkmark.c:
	(SmoothDrawMinusCheckMark):

	improve size/center logic for inconsistant 'Minus' check

2004-12-14  Andrew Johnson <ajgenius@ajgenius.us>

	* themes/Industrial/Makefile.am:
	* themes/Metal/gtk-2.0/Makefile.am:
	* themes/Redmond/gtk/Makefile.am:

	commit missing Makefile.am's

2004-12-14  Andrew Johnson <ajgenius@ajgenius.us>

	* configure.ac:
	* Makefile.am:
	* engines/Makefile.am:
	* engines/metal/AUTHORS: