@@ -1,0 +1,13 @@
+All code is licensed either under the GPL or the LGPL.
+
+Crux - GPL
+HC - LGPL
+Industrial - GPL
+LighthouseBlue - GPL
+Metal - GPL
+Mist - GPL
+Redmond - LGPL
+ThinIce - GPL
+Smooth - LGPL
+
+For More information see COPYING.GPL and COPYING.LGPL.
